--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "dlt[duckdb]>=1.8.1",
     "openapi-pydantic>=0.5.1",
     "pytest>=8.3.5",
+    "pytest-cov>=6.0.0",
     "pyyaml>=6.0.2",
     "requests>=2.32.3",
     "responses>=0.25.7",
