--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,11 @@ dependencies = [
     "pydantic-ai>=0.0.40",
     "pytest>=8.3.5",
     "pytest-cov>=6.0.0",
+    "python-dotenv>=1.0.1",
     "pyyaml>=6.0.2",
     "requests>=2.32.3",
     "responses>=0.25.7",
     "streamlit>=1.43.2",
+    "types-pyyaml>=6.0.12.20241230",
     "types-requests>=2.32.0.20250306",
 ]
