--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,17 @@ dependencies = [
     "dlt[duckdb]>=1.8.1",
     "logfire>=3.8.1",
     "openapi-pydantic>=0.5.1",
+    "requests>=2.32.3",
     "pydantic-ai>=0.0.40",
+    "responses>=0.25.7",
+    "pyyaml>=6.0.2",
+]
+
+[dependency-groups]
+dev = [
     "pytest>=8.3.5",
     "pytest-cov>=6.0.0",
     "python-dotenv>=1.0.1",
-    "pyyaml>=6.0.2",
-    "requests>=2.32.3",
-    "responses>=0.25.7",
     "streamlit>=1.43.2",
     "types-pyyaml>=6.0.12.20241230",
     "types-requests>=2.32.0.20250306",
