--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,10 @@ dependencies = [
     "logfire>=3.8.1",
     "openapi-pydantic>=0.5.1",
     "requests>=2.32.3",
-    "pydantic-ai>=0.0.40",
+    "pydantic-ai==0.0.42",
     "responses>=0.25.7",
     "pyyaml>=6.0.2",
+    "mirascope[openai]>=1.22.0",
 ]
 
 [dependency-groups]
